<resources>
    <string name="app_name">Reservopia</string>
    <string name="histroy">Appointment History</string>
    <string name="upcomingAppointment">Upcoming Appointment</string>
    <string name="upcomingAppointments">Upcoming Appointments</string>
    <string name="select_location">Location </string>
    <string name="about">About</string>
    <string name="booking_app">Book Appointment</string>
    <string name="contact_us">Contact Us</string>
    <string name="aboutUs">User can book online appointment by choosing location, service, time slot and date as per their convenience and availability. It’s completely free and doesn’t require any set up.</string>

    <string name="email">Email              </string>
    <string name="internet_connection">"You need a network connection to use this application. Please turn on mobile network or Wi-Fi in Settings.</string>
    <string name="titleMsg">Unable to connect</string>
    <string name="settings">Settings</string>
    <string name="phone">Phone </string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="names">Name</string>
    <string name="first">First Name </string>
    <string name="last">Last Name </string>
    <string name="password">Password</string>
    <string name="conf_password">Re Password</string>
    <string name="email_password">Old Password</string>
    <string name="createAccount">Create Account</string>
    <string name="submit">Book Appointment</string>
    <string name="submit_btn">Submit</string>
    <string name="registeration">User Register : </string>
    <string name="register">Registration</string>
    <string name="available_service">Available Service</string>
    <string name="appointment">appointment</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="address">Address</string>
    <string name="CA">CA</string>
    <string name="appointment_confirmation">Appointment Confirmation</string>
    <string name="name">Name</string>
    <string name="service">Service</string>
    <string name="select_service">Service </string>
    <string name="date">Date</string>
    <string name="address_coloumn">Address</string>
    <string name="phone_column">Phone</string>
    <string name="confirmation_no">Confirmation #</string>
    <string name="confirmation_No">Confirmation No.</string>
    <string name="enter_confirmation_number">enter confirmation No.</string>
    <string name="confirmation_details">Confirmation Details</string>
    <string name="confirmation_details_small">Confirmation details :</string>
    <string name="appointment_history">Appointment History</string>
    <string name="service_type">Service Type</string>
    <string name="date_time">Date  </string>
    <string name="time_slot">Pick a time slot :</string>
    <string name="appointment_details">Appointment Details</string>


    <string name="contine">Continue</string>


    <string name="org_id">14</string>
    <string name="token">B3Yhavq16yxYIDDVYT4hyS20Y597dsDa</string>
    <string name="noConn">No Conncetion</string>
    <string name="error">Error</string>
    <string name="title">Title</string>
    <string name="dob">Date Of Birth</string>
    <string name="signUp">Sign Up</string>
    <string name="sign_up_and_book_appoint">Sign Up &amp; Book Appointment</string>
    <string name="time_Zone">Time zone</string>
    <string name="getDetails">Get Details</string>


    <string name="ConfirmNewPasword">Confirm New Password</string>
    <string name="match_does_not"> does not match.</string>
    <string name="passwordmymsg">must be contain min 8 and upto 15 chars.</string>
    <string name="firstnamemsg">First name is required.</string>
    <string name="lastnamemsg"> Last name is required.</string>
    <string name="DateofBirthmsg">Date of birth is required.</string>
    <string name="Phonemsg">Phone no must be 10 digits number.</string>
    <string name="Emailmsg">Email: enter valid email.</string>
    <string name="login_validation">Enter valid email and password.</string>
    <string name="passwordmsg">Must contain  6 to 15 chars.</string>
    <string name="passwordmsg2">Re password must match with password.</string>
    <string name="password_select">Enter valid email/password.</string>
    <string name="conformmsg">ConfirmPassword: must be present.</string>
    <string name="headercreateaccount">Please Validate</string>
    <string name="time_slot_validation">Time Slot</string>
    <string name="user_validation">User Registration</string>
    <string name="passworddoednotmatch">Password and Re-Password mismatch.</string>
    <string name="firstname">enter first name</string>
    <string name="lastname" translatable="false">enter last name</string>
    <string name="dateofbirth">mm/dd/yyyy</string>
    <string name="phone1">enter phone</string>
    <string name="address1">enter address</string>

    <string name="email1">enter email</string>
    <string name="paswordlogin">enter password</string>

    <string name="enter_confirm">enter re-password</string>
    <string name="enter_mailed_confirm">enter old password</string>
    <string name="enter_phone">enter phone no</string>
    <string name="enter_last">enter last name</string>
    <string name="enter_first">enter first name</string>
    <string name="dob_date">mm/dd/yyyy</string>


    <string name="login_information">Login information : </string>
    <string name="personal_information">Personal details :</string>
    <string name="select_time_slot">Select one time slot.</string>
    <string name="options">Select appointment options :</string>
    <string name="no_internet_message">No internet connection!</string>
    <string name="no_internet_connection_and_try_again">Please check your Internet connection and try again.</string>
    <string name="try_again">Try again</string>
    <string name="status">Status</string>
    <string name="location_details">Location details :</string>
    <string name="orginzatrion">Organization</string>
    <string name="locName">LocName</string>
    <string name="Booked">Booked</string>
    <string name="confirmation">Confirmation</string>
    <string name="Location">Location</string>
    <string name="confirmation_msg">Thank you, your appointment is booked.</string>
    <string name="confirmationno">Confirmation ID</string>
    <string name="login">Login</string>
    <string name="login_samll">login</string>
    <string name="logout">Logout</string>
    <string name="reset">reset</string>
    <string name="reset_cap">Reset</string>
    <string name="forgot"><u>Forgot password?</u></string>
    <string name="signup">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_appointment">Cancel Appointment</string>

    <string name="edit_appointment">Edit Appointment</string>
    <string name="edit">Edit</string>
    <string name="allocated">This time slot already allocated.</string>
    <string name="histroy_noEmail">No email exists</string>
    <string name="history_found">No history found.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="alphabets">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="reset_pass">Reset Password</string>
    <string name="forgot_password_small">Forgot password :</string>
    <string name="find_your_appointment">Find your appointment </string>
    <string name="reset_pass_samll">Reset password :</string>
    <string name="forgot_title">Forgot Password</string>
    <string name="fromLogin">fromlogin</string>

    <string name="isFromHomeScreen">isFromHomeScreen</string>
    <string name="select_provider">Provider</string>
    <string name="edit_personal_info">Edit Personal Info</string>
    <string name="reset_code">Reset Code</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">enter new password</string>
    <string name="enter_reset_code">enter reset code</string>

    <string name="emailMsg1">Invalid email</string>
    <string name="invalid_date_for_dob">Invalid date for date of birth.</string>
    <string name="dobMsg">Please match the date format. Ex:  mm/dd/yyyy  (04/09/2002) </string>


    <string name="all_field">All fields are required.</string>
    <string name="email_error_msg">Email is required.</string>
    <string name="phone_error_msg">Must be 10 digits number.</string>
    <string name="password_error_msg">Must contain  6 to 15 chars.</string>
    <string name="re_password_mssg">Must match with password.</string>

    <string name="didnotmatch_error_msg">Doesn’t match the password.</string>
    <string name="first_error_msg">First name is required.</string>
    <string name="last_error_msg">Last name is required.</string>
    <string name="resetPassword_msg"> We have sent a temporary code to your email id. Use that code to reset your password.</string>
    <string name="account_create_msg">Account created successfully.</string>
    <string name="or">or</string>
    <string name="search">Search Appointment</string>
    <string name="search_result">Search result</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email_error_msg_valid">Enter valid email.</string>
    <string name="details_updated">Your profile updated successfully.</string>
    <string name="noappontmentfound">No appointment found,\n please book a new appointment.</string>
    <string name="unable_to">Unable to cancel the Appointment.</string>
    <string name="multiple_time_slot">Please select the time slots</string>
    <string name="confirmation_timeSlot"> Appointment duration </string>
    <string name="confirmation_timeSlot_msg">Please confirm the appointment time on</string>
    <string name="scheduling">sc</string>
    <string name="button">Cancel</string>
    <string name="save">O</string>
    <string name="ok">Ok</string>
    <string name="to">To :</string>
    <string name="from">From :</string>
    <string name="cancel_msg_appoint">Appointment has been cancelled.</string>

</resources>
